--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,10 @@
         "yiisoft/yii2": ">=2.0.6",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
-        "yiisoft/yii2-jui": "~2.0.0"
+        "yiisoft/yii2-jui": "~2.0.0",
+        "yiisoft/yii2-imagine": "^2.0",
+        "kartik-v/yii2-widget-fileinput": "@dev",
+        "nodge/yii2-eauth": "~2.0"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
