--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "yiisoft/yii2-imagine": "^2.0",
         "kartik-v/yii2-widget-fileinput": "@dev",
         "nodge/yii2-eauth": "~2.0",
-        "2amigos/yii2-tinymce-widget": "~1.1"
+        "2amigos/yii2-tinymce-widget": "~1.1",
+        "rmrevin/yii2-ulogin": "1.3.*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
